[package]
name = "client-native"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
common = { path = "../common" }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "0.17.0"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.3"
mezzenger-websocket = "0.2.4"

anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
url = "2.3.1"
rustyline-async = "0.3.0"
tokio-rayon = "2.1.0"
