[package]
name = "client-native"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
common = { path = "../common" }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.18.0" 
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.4"
mezzenger-websocket = "0.2.5"

anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.5"
url = "2.4.1"
rustyline-async = "0.4.0"
tokio-rayon = "2.1.0"
