[package]
name = "client"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["panic_hook", "logging"]
panic_hook = ["console_error_panic_hook"]
logging = ["log", "console_log"]

[dependencies]
common = { path = "../common" }
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { version = "0.4.17", optional = true }
console_log = { version = "0.2.0", optional = true }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
features = []
