[package]
name = "client"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
js-utils = "0.1.3"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.2"
mezzenger-websocket = "0.2.3"
mezzenger-webworker = "0.1.1"
web-sys = { version = "0.3.60", features = [
    "WebSocket",
    "Worker",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
