[package]
name = "server"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.66"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
warp = "0.3.3"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.0"
mezzenger-websocket = { version = "0.2.0", default-features = false, features = [
    "warp"
] }
