[package]
name = "server"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.68"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
warp = "0.3.3"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.3"
mezzenger-websocket = { version = "0.2.4", default-features = false, features = [
    "warp"
] }
