[package]
name = "server"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3.5"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.4"
mezzenger-websocket = { version = "0.2.5", default-features = false, features = [
    "warp"
] }
