[package]
name = "worker"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
js-utils = "0.1.4"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.4"
mezzenger-webworker = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
